@@ -37,12 +37,14 @@ while :
 do
     java -Xms60m -Xmx1g -Xss256k \
       -Xgcpolicy:gencon \
+      -Xshareclasses:none \
       -Xquickstart -Xcompressedrefs \
       -Xtune:virtualized \
       -XX:+UseStringDeduplication \
       -XX:-ShrinkHeapInSteps \
       -XX:TieredStopAtLevel=1 \
       -XX:+IgnoreUnrecognizedVMOptions \
+      --enable-native-access=ALL-UNNAMED \
       --add-opens=java.base/java.net=ALL-UNNAMED \
       --add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED \
       -jar $jar_path --port $port &
